CUI-260 - Fix overflow caused by accessibilty text in FF

--- a/source/less/components/toolbar.less
+++ b/source/less/components/toolbar.less
@@ -38,6 +38,8 @@ The top toolbar with action icons
     Button toolbar of icons defined using the <a> or <button> tags
 */
 .icongroup {
+    overflow: hidden; // Fixes CUI-260 by preventing accessibility text in <button> tags in icon groups from overflowing
+    
     // Any icon in an icon group should be medium sized
     [class^="icon-"],
     [class*=" icon-"] {
